<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fontFamily="@style/FontOpenSans">


    <TextView
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/sing_up"
        android:fontFamily="@style/FontOpenSans"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/rel_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@style/FontOpenSans"
        android:layout_marginRight="20dp"
        android:background="@drawable/register_border"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@style/FontOpenSans"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp"
            />


        <EditText
            android:id="@+id/edemail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@style/FontOpenSans"
            android:layout_marginStart="25dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edittext_border"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp" />

        <TextView
            android:id="@+id/txpasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edemail"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@style/FontOpenSans"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"

             />

        <EditText
            android:id="@+id/edpassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edittext_border"
            android:drawableEnd="@drawable/ic_key"
            android:hint="@string/enter_password"
            android:fontFamily="@style/FontOpenSans"
            android:inputType="textPassword"
            android:padding="10dp" />
        <TextView
            android:id="@+id/cnfmtxpasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edpassword"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@style/FontOpenSans"
            android:text="@string/cnfm_password"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <EditText
            android:id="@+id/confmpassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edittext_border"
            android:drawableEnd="@drawable/ic_key"
            android:hint="@string/enter_cnfm_password"
            android:fontFamily="@style/FontOpenSans"
            android:inputType="textPassword"
            android:padding="10dp" />


        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@style/FontOpenSans"
            android:text="@string/sing_up"
            android:textStyle="bold"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/already_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel_register"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@style/FontOpenSans"
        android:text="@string/already_account"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>